fix: allow horizontal scroll on smaller screens

--- a/public/css/bandcamp.css
+++ b/public/css/bandcamp.css
@@ -31,7 +31,7 @@ body{
 	background: -webkit-linear-gradient(to right, #FFB88C, #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
 	/*background: linear-gradient(to right, #FFB88C, #DE6262);*/ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	background: linear-gradient(to right, #d36167, #f48e38);
-	overflow-x: hidden;
+	overflow-x: scroll;
 
 }
 
